--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	   <a href="https://vdse.bdstatic.com//192d9a98d782d9c74c96f09db9378d93.mp4"><button>click</button></a>
-	棚骏成<img src="33453981122E2D40F3BBDCB78718F737_0.gif">
+	<img src="33453981122E2D40F3BBDCB78718F737_0.gif">
 </body>
 </html>
